# serverless-fastapi

.github/workflows/: api.yml
services/tasks_api/: pyproject.toml
